[project]
name = "yt-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.13",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "authlib==1.6.0",
    "build==1.2.2.post1",
    "certifi==2025.6.15",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "colorama==0.4.6",
    "cryptography==45.0.4",
    "dataclasses-json==0.6.7",
    "defusedxml==0.7.1",
    "distro==1.9.0",
    "fastapi==0.115.13",
    "frozenlist==1.7.0",
    "greenlet==3.2.3",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "jiter==0.10.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain==0.3.25",
    "langchain-community==0.3.25",
    "langchain-core==0.3.65",
    "langchain-openai==0.3.24",
    "langchain-text-splitters==0.3.8",
    "langsmith==0.3.45",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "multidict==6.5.0",
    "mypy-extensions==1.1.0",
    "numpy==2.3.0",
    "openai==1.88.0",
    "orjson==3.10.18",
    "packaging==24.2",
    "propcache==0.3.2",
    "psycopg2-binary==2.9.10",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.9.1",
    "pyproject-hooks==1.2.0",
    "python-dotenv==1.1.0",
    "pyyaml==6.0.2",
    "redis==6.2.0",
    "regex==2024.11.6",
    "requests==2.32.4",
    "requests-toolbelt==1.0.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.41",
    "starlette==0.46.2",
    "tenacity==9.1.2",
    "tiktoken==0.9.0",
    "tqdm==4.67.1",
    "typing-extensions==4.14.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.1",
    "urllib3==2.5.0",
    "uvicorn==0.34.3",
    "yarl==1.20.1",
    "youtube-transcript-api==1.1.0",
    "zstandard==0.23.0",
]
